# hentail_library

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  analysis_options.yaml  hentai-library.session.sql  installer.iss  pubspec.yaml
.github/issue-drafts/: prd-comment.md  prd-rust-frb-migration.md  slice-01-fixed.md  slice-01-monorepo.md  slice-02-fixed.md  slice-02-frb-comic-id.md  slice-03-fixed.md  slice-03-seaorm-browse.md  slice-04-fixed.md  slice-04-library-sync.md  slice-05-fixed.md  slice-05-reader-existing.md  slice-06-fixed.md  slice-06-formats-vendor.md  slice-07-fixed.md  slice-07-series-history-home.md  slice-08-fixed.md  slice-08-retire-drift.md
.github/scripts/: verify_ci_passed.sh
.github/workflows/: ci.yml  release.yml
app/: analysis_options.yaml  flutter_rust_bridge.yaml  l10n.yaml  pubspec.yaml
app/l10n/: app_en.arb  app_zh.arb
app/lib/: main.dart
app/linux/: CMakeLists.txt
app/rust_builder/: .gitignore  pubspec.yaml
app/test/: data.json  (+2 more)
core/: Cargo.toml  README.md
core/crates/core/: Cargo.toml  build.rs
core/crates/core/src/: comic_id.rs  db.rs  error.rs  lib.rs  runtime.rs  series_id.rs
core/crates/core/src/author/: mod.rs
core/crates/core/src/comic/: dto.rs  mod.rs  page_query.rs  repository.rs  write.rs
core/crates/core/src/entity/: authors.rs  comic_authors.rs  comic_meta.rs  comic_reading_histories.rs  comic_tags.rs  comic_thumbnails.rs  comics.rs  mod.rs  saved_paths.rs  series.rs  series_items.rs  series_reading_histories.rs  series_thumbnails.rs  tags.rs
core/crates/core/src/formats/: mobile_pdf.rs  mobile_rar.rs  mod.rs  pdf.rs  rar.rs  sevenz.rs
core/crates/core/src/history/: dto.rs  mod.rs  repository.rs
core/crates/core/src/home/: mod.rs
core/crates/core/src/migration/: m20240630_000002_drift_v2_seed.rs  m20240630_000003_thumbnail_columns.rs  m20240703_000004_drop_series_reading_histories.rs  m20250705_000005_comic_meta_split.rs  m20250705_000006_folder_series.rs  m20250705_000007_restore_series_reading_histories.rs  m20260717_000008_ensure_greenfield_schema.rs  m20260718_000009_user_set_and_series_thumbnails.rs  mod.rs
core/crates/core/src/path/: mod.rs
core/crates/core/src/reader/: backend.rs  cache.rs  dto.rs  manager.rs  mod.rs  open.rs  page.rs  prefetch.rs
core/crates/core/src/series/: clustering.rs  dto.rs  infer.rs  mod.rs  orchestrator.rs  page_query.rs  repository.rs  title_mapping.rs  volume_key.rs  write.rs
core/crates/core/src/sync/: dto.rs  handle.rs  merge.rs  mod.rs  orchestrator.rs  parser.rs  plan.rs  scanner.rs  series_rebuild.rs  thumbnail.rs  writer.rs
core/crates/core/src/tag/: mod.rs
core/crates/core/src/thumbnail/: generate.rs  mod.rs  queue.rs
core/crates/core/src/util/: html_entities.rs  mod.rs  natural_sort.rs
core/crates/core/tests/: drift_v2_takeover.rs  epub_sync_test.rs  folder_series_rebuild.rs  greenfield_schema.rs  rar_thumbnail_repro.rs  reader_formats_session.rs  reader_zip_session.rs  reading_history_page.rs  set_cover_from_page.rs  sync_merge_test.rs
core/crates/flutter/: Cargo.toml
core/crates/flutter/src/: frb_generated.rs  lib.rs  log_file.rs  tracing_init.rs
core/crates/flutter/src/api/: author.rs  comic.rs  history.rs  home.rs  init.rs  logging.rs  mod.rs  path.rs  reader.rs  series.rs  stream_watch.rs  sync.rs  tag.rs  thumbnail.rs
core/tests/: series_inference_golden.rs
core/tests/fixtures/: comic_id_vectors.json  drift_v2.sql
docs/: architecture.md  v2_migration_cleanup_checklist.md
lib/: main.dart
scripts/: link-rust-builder.ps1  link-rust-builder.sh  setup-dev.ps1  setup-dev.sh
test/: project_layout_test.dart  widget_test.dart
(+1246 files in other folders)
