[package]
name = "hentai-core"
description = "Hentai Library core logic (scan, DB, reader)"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[[test]]
name = "folder_series_rebuild"
path = "tests/folder_series_rebuild.rs"

[[test]]
name = "epub_sync"
path = "tests/epub_sync_test.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
thiserror = "2"
tracing = "0.1"
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures = "0.3"
walkdir = "2"
zip = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif", "bmp"] }
quick-xml = { version = "0.37", features = ["serialize"] }
rayon = "1"
regex = "1"
sevenz-rust = "0.6"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
unrar = "0.5"
pdfium-render = "0.8"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
